--- a/Resources/skeleton/bundle/DefaultController.php.twig
+++ b/Resources/skeleton/bundle/DefaultController.php.twig
@@ -3,15 +3,15 @@
 namespace {{ namespace }}\Controller;
 
 {% block use_statements %}
-use Symfony\Bundle\FrameworkBundle\Controller\Controller;
+use Zikula\Core\Controller\AbstractController;
 {% if 'annotation' == format -%}
-use Sensio\Bundle\FrameworkExtraBundle\Configuration\Route;
-use Sensio\Bundle\FrameworkExtraBundle\Configuration\Template;
+use Zikula\Bundle\FrameworkExtraBundle\Configuration\Route;
+use Zikula\Bundle\FrameworkExtraBundle\Configuration\Template;
 {% endif %}
 {% endblock use_statements %}
 
 {% block class_definition %}
-class DefaultController extends Controller
+class DefaultController extends AbstractController
 {% endblock class_definition %}
 {
 {% block class_body %}
@@ -21,7 +21,7 @@ class DefaultController extends Controller
      * @Template()
      */
     {% endif -%}
-    public function indexAction($name)
+    public function indexAction($name = 'no name')
     {
         {% if 'annotation' != format -%}
         return $this->render('{{ bundle }}:Default:index.html.twig', array('name' => $name));
