More corrections as skeldir doesnt work with copy()

--- a/Resources/skeleton/bundle/composer.json.twig
+++ b/Resources/skeleton/bundle/composer.json.twig
@@ -1,6 +1,6 @@
 {
     "name": "{{ vendor|lower }}/{{ bundle_name|lower }}-module",
-    "description": "{{ module }} description",
+    "description": "{{ bundle }} description",
     "type": "zikula-module",
     "license": "LGPL-3.0+",
     "authors": [
@@ -18,7 +18,7 @@
     },
     "extra": {
         "zikula": {
-            "class": "{{ namespace_double }}\\{{ module_double }}"
+            "class": "{{ namespace_double }}\\{{ bundle_double }}"
         }
     }
 }
