--- a/Resources/skeleton/crud/tests/others/full_scenario.php.twig
+++ b/Resources/skeleton/crud/tests/others/full_scenario.php.twig
@@ -10,10 +10,10 @@
         $crawler = $client->click($crawler->selectLink('Create a new entry')->link());
 
         // Fill in the form and submit it
-        $form = $crawler->selectButton('Create')->form(array(
+        $form = $crawler->selectButton('Create')->form([
             '{{ form_type_name|lower }}[field_name]'  => 'Test',
             // ... other fields to fill
-        ));
+        ]);
 
         $client->submit($form);
         $crawler = $client->followRedirect();
@@ -24,10 +24,10 @@
         // Edit the entity
         $crawler = $client->click($crawler->selectLink('Edit')->link());
 
-        $form = $crawler->selectButton('Edit')->form(array(
+        $form = $crawler->selectButton('Edit')->form([
             '{{ form_type_name|lower }}[field_name]'  => 'Foo',
             // ... other fields to fill
-        ));
+        ]);
 
         $client->submit($form);
         $crawler = $client->followRedirect();
