--- a/Resources/skeleton/bundle/composer.json.twig
+++ b/Resources/skeleton/bundle/composer.json.twig
@@ -1,8 +1,9 @@
 {
     "name": "{{ vendor|lower }}/{{ bundle_name|lower }}-module",
+    "version": "1.0.0",
     "description": "{{ bundle }} description",
     "type": "zikula-module",
-    "license": "LGPL-3.0+",
+    "license": "MIT",
     "authors": [
         {
             "name": "Name",
@@ -11,14 +12,23 @@
         }
     ],
     "autoload": {
-        "psr-0": { "{{ namespace_double }}\\": "" }
+        "psr-4": { "{{ namespace_double }}\\": "" }
     },
     "require": {
-        "php": ">5.3.3"
+        "php": ">5.5.9"
     },
     "extra": {
         "zikula": {
-            "class": "{{ namespace_double }}\\{{ bundle_double }}"
+            "core-compatibility": ">={{ zikulaVersion }}",
+            "class": "{{ namespace_double }}\\{{ bundle_double }}",
+            "displayname": "{{ bundle_name }}",
+            "url": "{{ bundle_name|lower|slice(0,-6) }}",
+            "capabilities": {
+                "admin": {"route": "{{ bundle|lower }}_default_index"}
+            },
+            "securityschema": {
+                "{{ bundle_name }}::": "::"
+            }
         }
     }
 }
