--- a/Resources/skeleton/bundle/routing.yml.twig
+++ b/Resources/skeleton/bundle/routing.yml.twig
@@ -1,3 +1,3 @@
-{{ extension_alias }}_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: {{ bundle }}:Default:index }
+{{ bundle|lower }}:
+    resource: "@{{ bundle }}/Controller"
+    type:     annotation
