correct generation of composer.json php min

--- a/Resources/skeleton/bundle/composer.json.twig
+++ b/Resources/skeleton/bundle/composer.json.twig
@@ -15,7 +15,7 @@
         "psr-4": { "{{ namespace_double }}\\": "" }
     },
     "require": {
-        "php": ">5.5.9"
+        "php": ">={{ php_min }}"
     },
     "extra": {
         "zikula": {
