--- a/Resources/skeleton/bundle/ConfigController.php.twig
+++ b/Resources/skeleton/bundle/ConfigController.php.twig
@@ -8,26 +8,33 @@ use Zikula\Core\Controller\AbstractController;
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\Route;
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\Template;
 use Symfony\Component\HttpFoundation\Request;
+use Zikula\ThemeModule\Engine\Annotation\Theme;
 {% endif %}
 {% endblock use_statements %}
 
 {% block class_definition %}
-class DefaultController extends AbstractController
+/**
+{% if 'annotation' == format -%}
+ * @Route("/config")
+{% endif %}
+ */
+class ConfigController extends AbstractController
 {% endblock class_definition %}
 {
 {% block class_body %}
     {% if 'annotation' == format -%}
     /**
-     * @Route("/hello/{name}")
+     * @Route("/settings")
+     * @Theme("admin")
      * @Template()
      */
     {% endif -%}
-    public function indexAction(Request $request, $name = 'no name')
+    public function settingsAction(Request $request)
     {
         {% if 'annotation' != format -%}
-        return $this->render('@{{ bundle }}/Default/index.html.twig', ['name' => $name]);
+        return $this->render('@{{ bundle }}/Admin/config.html.twig');
         {%- else -%}
-        return ['name' => $name];
+        return [];
         {%- endif %}
 
     }
