--- a/Resources/skeleton/bundle/Extension.php.twig
+++ b/Resources/skeleton/bundle/Extension.php.twig
@@ -6,7 +6,7 @@ namespace {{ namespace }}\DependencyInjection;
 use Symfony\Component\DependencyInjection\ContainerBuilder;
 use Symfony\Component\Config\FileLocator;
 use Symfony\Component\HttpKernel\DependencyInjection\Extension;
-use Symfony\Component\DependencyInjection\Loader;
+use Symfony\Component\DependencyInjection\Loader\YamlFileLoader;
 {% endblock use_statements %}
 
 /**
@@ -26,20 +26,8 @@ class {{ bundle_basename }}Extension extends Extension
      */
     public function load(array $configs, ContainerBuilder $container)
     {
-        $configuration = new Configuration();
-        $config = $this->processConfiguration($configuration, $configs);
-
-        {% if format == 'yml' -%}
-        $loader = new Loader\YamlFileLoader($container, new FileLocator(__DIR__.'/../Resources/config'));
+        $loader = new YamlFileLoader($container, new FileLocator(__DIR__.'/../Resources/config'));
         $loader->load('services.yml');
-        {%- elseif format == 'xml' or format == 'annotation' -%}
-        $loader = new Loader\XmlFileLoader($container, new FileLocator(__DIR__.'/../Resources/config'));
-        $loader->load('services.xml');
-        {%- elseif format == 'php' -%}
-        $loader = new Loader\PhpFileLoader($container, new FileLocator(__DIR__.'/../Resources/config'));
-        $loader->load('services.php');
-        {%- endif %}
-
     }
 {% endblock class_body %}
 }
