--- a/Resources/skeleton/bundle/services.yml.twig
+++ b/Resources/skeleton/bundle/services.yml.twig
@@ -1,11 +1,11 @@
-parameters:
-{% block parameters %}
-#    {{ extension_alias }}.example.class: {{ namespace }}\Example
-{% endblock parameters %}
-
 services:
 {% block services %}
-#    {{ extension_alias }}.example:
-#        class: %{{ extension_alias }}.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    {{ bundle_underscore }}.link_container:
+        class: {{ namespace }}\Container\LinkContainer
+        arguments:
+          - "@translator.default"
+          - "@router"
+          - "@zikula_permissions_module.api.permission"
+        tags:
+          - { name: zikula.link_container }
 {% endblock services %}
