explicitly set template name in annotation

--- a/Resources/skeleton/bundle/ConfigController.php.twig
+++ b/Resources/skeleton/bundle/ConfigController.php.twig
@@ -26,7 +26,7 @@ class ConfigController extends AbstractController
     /**
      * @Route("/settings")
      * @Theme("admin")
-     * @Template()
+     * @Template("{{ bundle }}:Admin:config.html.twig")
      */
     {% endif -%}
     public function settingsAction(Request $request)
