--- a/Resources/skeleton/crud/actions/create.php.twig
+++ b/Resources/skeleton/crud/actions/create.php.twig
@@ -7,7 +7,7 @@
 {% if 'annotation' == format %}
      * @Route("/", name="{{ route_name_prefix }}_create")
      * @Method("POST")
-     * @Template("{{ bundle }}:{{ entity }}:new.html.twig")
+     * @Template("{{ bundle }}:{{ entity|replace({'\\': '/'}) }}:new.html.twig")
 {% endif %}
 {% endblock phpdoc_method_annotations %}
      */
