--- a/Resources/skeleton/crud/actions/index.php.twig
+++ b/Resources/skeleton/crud/actions/index.php.twig
@@ -8,7 +8,7 @@
 {% if 'annotation' == format %}
      * @Route("/", name="{{ route_name_prefix }}")
      * @Method("GET")
-     * @Template()
+     * @Template("{{ bundle }}:{{ entity|replace({'\\': '/'}) }}:index.html.twig")
 {% endif %}
 {% endblock phpdoc_method_annotations %}
      */
