--- a/Resources/skeleton/crud/actions/new.php.twig
+++ b/Resources/skeleton/crud/actions/new.php.twig
@@ -8,7 +8,7 @@
 {% if 'annotation' == format %}
      * @Route("/new", name="{{ route_name_prefix }}_new")
      * @Method("GET")
-     * @Template()
+     * @Template("{{ bundle }}:{{ entity|replace({'\\': '/'}) }}:new.html.twig")
 {% endif %}
 {% endblock phpdoc_method_annotations %}
      */
