updated usage of obsolete annotation class

--- a/Resources/skeleton/crud/controller.php.twig
+++ b/Resources/skeleton/crud/controller.php.twig
@@ -9,9 +9,8 @@ use Symfony\Component\HttpFoundation\Request;
 
 use Symfony\Bundle\FrameworkBundle\Controller\Controller;
 {% if 'annotation' == format -%}
-use Sensio\Bundle\FrameworkExtraBundle\Configuration\Method;
-use Sensio\Bundle\FrameworkExtraBundle\Configuration\Route;
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\Template;
+use Symfony\Component\Routing\Annotation\Route;
 {%- endif %}
 
 use {{ namespace }}\Entity\{{ entity }};
