--- a/Resources/skeleton/bundle/ConfigController.php.twig
+++ b/Resources/skeleton/bundle/ConfigController.php.twig
@@ -5,9 +5,9 @@ namespace {{ namespace }}\Controller;
 {% block use_statements %}
 use Zikula\Core\Controller\AbstractController;
 {% if 'annotation' == format -%}
-use Sensio\Bundle\FrameworkExtraBundle\Configuration\Route;
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\Template;
 use Symfony\Component\HttpFoundation\Request;
+use Symfony\Component\Routing\Annotation\Route;
 use Zikula\ThemeModule\Engine\Annotation\Theme;
 {% endif %}
 {% endblock use_statements %}
